--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <img id="couplePhoto" alt="Nuestra foto juntos" src="./Subir/Juntos.jpeg" />
           </div>
           <p class="photo-legend">
-            <span aria-hidden="true">❝</span> Primer salida juntos, finde hermoso!!!
+            <span aria-hidden="true">❝</span>
+            Primer salida juntos. Finde hermoso
             <span aria-hidden="true">❞</span>
           </p>
         </div>
