--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             id="qrUrlInput"
             type="url"
             inputmode="url"
-            placeholder="https://tu-sitio.netlify.app"
+            placeholder="https://crucigrama-del-amor.netlify.app/"
             style="
               min-width: 320px;
               max-width: 72vw;
