--- a/index.html
+++ b/index.html
@@ -197,54 +197,12 @@
       <div class="modal">
         <h3 id="qrTitle">Abrí este juego desde tu celular</h3>
         <p style="margin-bottom: 10px">Escaneá el QR o compartí el link</p>
-        <div
-          style="
-            display: flex;
-            gap: 8px;
-            justify-content: center;
-            align-items: center;
-            margin: 6px 0 10px;
-            flex-wrap: wrap;
-          "
-        >
-          <input
-            id="qrUrlInput"
-            type="url"
-            inputmode="url"
-            placeholder="https://crucigrama-del-amor.netlify.app/"
-            style="
-              min-width: 320px;
-              max-width: 72vw;
-              padding: 8px 10px;
-              border-radius: 8px;
-              border: 1px solid var(--border);
-            "
-          />
-          <button id="setQrUrl" class="secondary">Guardar URL</button>
-        </div>
+        <div></div>
         <div
           id="qrContainer"
           style="display: grid; place-items: center; margin: 10px 0 8px"
         ></div>
-        <div
-          id="qrLinkWrap"
-          style="display: flex; gap: 8px; justify-content: center; align-items: center; margin: 0 0 10px; flex-wrap: wrap"
-        >
-          <a
-            id="qrLink"
-            href="#"
-            target="_blank"
-            rel="noopener"
-            style="
-              color: var(--accent);
-              font-weight: 700;
-              text-decoration: underline;
-              max-width: 88%;
-              overflow-wrap: anywhere;
-            "
-          ></a>
-          <button id="openUrl" class="secondary">Abrir</button>
-        </div>
+        <div></div>
         <div class="controls" style="justify-content: center">
           <button id="copyUrl" class="secondary">Copiar URL</button>
           <button id="downloadQr" class="secondary">Descargar QR</button>
