--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
         <div></div>
         <div class="controls" style="justify-content: center">
           <button id="copyUrl" class="secondary">Copiar URL</button>
+          <button id="shareQr" class="secondary">Compartir QR</button>
           <button id="downloadQr" class="secondary">Descargar QR</button>
           <button id="closeQr" class="secondary">Cerrar</button>
         </div>
