--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
       aria-live="polite"
       aria-atomic="true"
     ></div>
+    <div id="toastOverlay" aria-hidden="true"></div>
 
     <script src="vendor/qrcode.min.js" defer></script>
     <script src="index.js" defer></script>
